Fix Bugs
